
--Fixed so that heir that inherits property is fittest offspring or relative
  within 200 tiles of property itself (used to be fittest one that is within
  200 tiles of where the owner died, even if the owner was far away from the
  property in question).  Note that if none is found within 200 tiles of
  property, we still consider offspring (or relatives) at any distance as a
  fall-back.






Server Fixes  (2023-June-30)

--Gene score effects used to only be bi-directional for mother, grandma, etc
  that died before you died (their age at death would affect your gene score).
  Now bi-directionality works for childless aunts, uncles, and older siblings.
  If any of these people die before you do, they affect your gene score.
  Fixes #833

--Now counting aunts with children for gene score (used to only count childless
  aunts).  Also, fixed a potential bug where a childless grandmother (if your
  mother had died) could be double-counted as an aunt for gene score.

--Before, all Donkeytown residents were spawned as Eve, instead of being born
  as a baby to a Donkeytown mother, which was an unintended side-effect of
  switching over to the new personal curse system.  Now a fertile mother in
  Donkeytown is chosen, and you're born as a Donkeytown baby whenever possible.
  This does not try to balance families or races in Donkeytown, nor does it
  observe birth cooldowns for Donkeytown mothers.  Donkeytown births will be
  completely random for now, and everyone will be in one big family out there.
  Due to biome race specialization, this means that Donkeytown civilization
  will be somewhat limited, but that's okay for now.  The assumption is that
  Donkeytown will be rather small (so balancing families and races there
  wouldn't be practical, and shouldn't generally be as interesting as the main
  game anyway.  Fixes #835

--Fleeing and random-moving objects can now cross biome boundaries if they